--- a/cleansweep/pom.xml
+++ b/cleansweep/pom.xml
@@ -17,6 +17,11 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+  <properties>
+     <sonar.organization>ashaik16</sonar.organization>
+     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+ </properties>
+	
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
