--- a/control-system/pom.xml
+++ b/control-system/pom.xml
@@ -18,6 +18,11 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+<properties>
+  <sonar.organization>ashaik16</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
+	
   <dependencies>
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
    <dependency>
