--- a/sensor-simulator/pom.xml
+++ b/sensor-simulator/pom.xml
@@ -18,6 +18,11 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+ <properties>
+   <sonar.organization>ashaik16</sonar.organization>
+   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+ </properties>
+
   <dependencies>
      <dependency>
   <groupId>com.group9</groupId>
