--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -35,7 +35,12 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
               mvn -B package --file /home/runner/work/CleanSweepSimulator_Group2/CleanSweepSimulator_Group2/cleansweep/pom.xml
+              
+              cd /home/runner/work/CleanSweepSimulator_Group2/CleanSweepSimulator_Group2/sensor-simulator/
               mvn install:install-file -Dfile=/home/runner/work/CleanSweepSimulator_Group2/CleanSweepSimulator_Group2/cleansweep/target/cleansweep-0.0.1-SNAPSHOT.jar -DgroupId=com.group9 -DartifactId=cleansweep -Dversion=0.0.1-SNAPSHOT -Dpackaging=jar 
+             
               mvn -B package --file /home/runner/work/CleanSweepSimulator_Group2/CleanSweepSimulator_Group2/sensor-simulator/pom.xml
+            
+              cd /home/runner/work/CleanSweepSimulator_Group2/CleanSweepSimulator_Group2/control-system/
               mvn install:install-file -Dfile=/home/runner/work/CleanSweepSimulator_Group2/CleanSweepSimulator_Group2/sensor-simulator/target/sensor-simulator-0.0.1-SNAPSHOT.jar -DgroupId=com.group9 -DartifactId=sensor-simulator -Dversion=0.0.1-SNAPSHOT -Dpackaging=jar 
               mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ashaik16_CleanSweepSimulator_Group2
